--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 <body>
 
     <section class="hero">
-        <img src="logo.jpg" alt="Armelion Insignia" class="logo-img">
+        <img src="https://github.com/ArmelionOfficial/ArmelionOfficial.github.io/blob/main/logo.jpg?raw=true" alt="Armelion Insignia" class="logo-img">
         
         <h1 class="gold-text">ARMELION</h1>
         
