--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             text-shadow: 0px 0px 5px rgba(255, 215, 0, 0.3);
         }
         
-        /* --- HERO SECTION --- */
+      /* --- HERO SECTION --- */
         .hero {
             height: 100vh;
             display: flex;
@@ -32,10 +32,10 @@
             justify-content: center;
             align-items: center;
             text-align: center;
-            background: radial-gradient(circle at center, #1a1a1a 0%, #000000 100%);
+            /* CHANGED: Solid Black to make the logo box invisible */
+            background-color: #000000; 
             padding: 20px;
         }
-
         .logo-img {
             width: 180px;
             margin-bottom: 2rem;
