--- a/index.html
+++ b/index.html
@@ -38,28 +38,30 @@
             font-family: 'Playfair Display', serif; font-size: 3.5rem; letter-spacing: 2px; margin-bottom: 0.5rem; font-weight: 700;
         }
         .tagline { font-size: 1.2rem; letter-spacing: 5px; color: #ddd; text-transform: uppercase; margin-bottom: 2rem; }
+        .btn-gold { padding: 15px 40px; background: #D4AF37; color: #000; border: none; font-weight: bold; cursor: pointer; letter-spacing: 2px; text-decoration: none; display: inline-block; transition: 0.3s; }
+        .btn-gold:hover { background: #fff; color: #000; box-shadow: 0 0 20px rgba(212, 175, 55, 0.5); }
 
-        /* --- QUALITY SECTION (From Project Report) --- */
+        /* --- STORY SECTION --- */
         .section { padding: 80px 20px; text-align: center; }
         .about { background: #0a0a0a; }
         h2 { font-family: 'Playfair Display', serif; font-size: 2.5rem; color: #D4AF37; margin-bottom: 20px; }
         p.desc { max-width: 700px; margin: 0 auto; line-height: 1.8; color: #aaa; font-size: 1rem; }
         
-        /* --- COLLECTION GRID (With Images) --- */
-        .collection-grid { display: flex; justify-content: center; gap: 30px; flex-wrap: wrap; margin-top: 40px; }
+        /* --- COLLECTION GRID (4 ITEMS) --- */
+        .collection-grid { display: flex; justify-content: center; gap: 30px; flex-wrap: wrap; margin-top: 40px; max-width: 1200px; margin-left: auto; margin-right: auto; }
         .card {
-            background: #1a1a1a; width: 300px; border: 1px solid #333; overflow: hidden; transition: 0.3s;
+            background: #1a1a1a; width: 260px; /* Slightly smaller to fit 4 in a row */
+            border: 1px solid #333; overflow: hidden; transition: 0.3s;
         }
         .card:hover { border-color: #D4AF37; transform: translateY(-5px); }
-        .card-img { width: 100%; height: 350px; object-fit: cover; filter: grayscale(100%); transition: 0.5s; }
-        .card:hover .card-img { filter: grayscale(0%); } /* Color comes back on hover */
+        .card-img { width: 100%; height: 320px; object-fit: cover; filter: grayscale(100%); transition: 0.5s; }
+        .card:hover .card-img { filter: grayscale(0%); } 
         .card-info { padding: 20px; }
-        .card h3 { color: #fff; margin-bottom: 5px; letter-spacing: 2px; font-size: 1.2rem; }
-        .card p { color: #888; font-size: 0.9rem; }
+        .card h3 { color: #fff; margin-bottom: 5px; letter-spacing: 1px; font-size: 1.1rem; }
+        .card p { color: #888; font-size: 0.8rem; }
 
         /* --- FOOTER --- */
         footer { padding: 50px 20px; text-align: center; border-top: 1px solid #222; background: #000; font-size: 0.9rem; color: #666; }
-        .btn-gold { padding: 15px 40px; background: #D4AF37; color: #000; border: none; font-weight: bold; cursor: pointer; letter-spacing: 2px; margin-top: 20px; text-decoration: none; display: inline-block; }
         
         @media (max-width: 768px) {
             .nav-links { display: none; }
@@ -83,7 +85,7 @@
         <img src="logo.jpg" alt="Armelion Insignia" class="logo-img">
         <h1 class="gold-text">ARMELION</h1>
         <p class="tagline">Rule Your World</p>
-        <a href="#collection" class="btn-gold">VIEW COLLECTION</a>
+        <a href="#collection" class="btn-gold">ENTER THE KINGDOM</a>
     </section>
 
     <section id="story" class="section about">
@@ -94,8 +96,6 @@
             Sourced directly from premium manufacturing hubs in Delhi and Ludhiana, 
             our apparel features <strong>High-GSM fabrics</strong>, precision stitching, 
             and modern cuts designed for the youth of Punjab.
-            <br><br>
-            <strong>Bold. Durable. Royal.</strong>
         </p>
     </section>
 
@@ -111,7 +111,7 @@
             </div>
 
             <div class="card">
-                <img src="https://images.unsplash.com/photo-1542272454315-4c01d7abdf4a?q=80&w=600&auto=format&fit=crop" class="card-img" alt="Denims">
+                <img src="https://images.unsplash.com/photo-1624378439575-d8705ad7ae80?q=80&w=600&auto=format&fit=crop" class="card-img" alt="Denims">
                 <div class="card-info">
                     <h3>CARGO DENIMS</h3>
                     <p>6-Pocket Utility | Rugged Wash</p>
@@ -123,6 +123,14 @@
                 <div class="card-info">
                     <h3>CLUB LAYERS</h3>
                     <p>Bomber Jackets | Premium Shirts</p>
+                </div>
+            </div>
+
+            <div class="card">
+                <img src="https://images.unsplash.com/photo-1611591437281-460bfbe1220a?q=80&w=600&auto=format&fit=crop" class="card-img" alt="Accessories">
+                <div class="card-info">
+                    <h3>ROYAL ACCESSORIES</h3>
+                    <p>Chains | Rings | Shades</p>
                 </div>
             </div>
         </div>
