--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
         h2 { font-family: 'Playfair Display', serif; font-size: 2.5rem; color: #D4AF37; margin-bottom: 20px; }
         p.desc { max-width: 700px; margin: 0 auto; line-height: 1.8; color: #aaa; font-size: 1rem; }
         
-        /* --- COLLECTION GRID (4 ITEMS) --- */
+        /* --- COLLECTION GRID (5 ITEMS) --- */
         .collection-grid { display: flex; justify-content: center; gap: 30px; flex-wrap: wrap; margin-top: 40px; max-width: 1200px; margin-left: auto; margin-right: auto; }
         .card {
-            background: #1a1a1a; width: 260px; /* Slightly smaller to fit 4 in a row */
+            background: #1a1a1a; width: 260px;
             border: 1px solid #333; overflow: hidden; transition: 0.3s;
         }
         .card:hover { border-color: #D4AF37; transform: translateY(-5px); }
@@ -127,10 +127,18 @@
             </div>
 
             <div class="card">
-                <img src="https://images.unsplash.com/photo-1611591437281-460bfbe1220a?q=80&w=600&auto=format&fit=crop" class="card-img" alt="Accessories">
+                <img src="https://images.unsplash.com/photo-1617038220319-276d3cfab638?q=80&w=600&auto=format&fit=crop" class="card-img" alt="Accessories">
                 <div class="card-info">
-                    <h3>ROYAL ACCESSORIES</h3>
-                    <p>Chains | Rings | Shades</p>
+                    <h3>ROYAL JEWELRY</h3>
+                    <p>Rings | Bracelets | Chains</p>
+                </div>
+            </div>
+
+             <div class="card">
+                <img src="https://images.unsplash.com/photo-1533867617858-e7b97e060509?q=80&w=600&auto=format&fit=crop" class="card-img" alt="Shoes">
+                <div class="card-info">
+                    <h3>FOOTWEAR</h3>
+                    <p>Loafers | High-Top Sneakers</p>
                 </div>
             </div>
         </div>
