--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         h2 { font-family: 'Playfair Display', serif; font-size: 2.5rem; color: #D4AF37; margin-bottom: 20px; }
         p.desc { max-width: 700px; margin: 0 auto; line-height: 1.8; color: #aaa; font-size: 1rem; }
         
-        /* --- COLLECTION GRID (5 ITEMS) --- */
+        /* --- COLLECTION GRID (7 ITEMS) --- */
         .collection-grid { display: flex; justify-content: center; gap: 30px; flex-wrap: wrap; margin-top: 40px; max-width: 1200px; margin-left: auto; margin-right: auto; }
         .card {
             background: #1a1a1a; width: 260px;
@@ -141,6 +141,23 @@
                     <p>Loafers | High-Top Sneakers</p>
                 </div>
             </div>
+
+            <div class="card">
+                <img src="https://images.unsplash.com/photo-1614164185128-e4ec99c436d7?q=80&w=600&auto=format&fit=crop" class="card-img" alt="Watches">
+                <div class="card-info">
+                    <h3>PREMIUM TIMEPIECES</h3>
+                    <p>Luxury Analog | Smart Editions</p>
+                </div>
+            </div>
+
+            <div class="card">
+                <img src="https://images.unsplash.com/photo-1594070319944-71b812065cdd?q=80&w=600&auto=format&fit=crop" class="card-img" alt="Perfume">
+                <div class="card-info">
+                    <h3>SIGNATURE SCENTS</h3>
+                    <p>French Perfumes | Royal Attars</p>
+                </div>
+            </div>
+
         </div>
     </section>
 
