--- a/perfumes.html
+++ b/perfumes.html
@@ -29,7 +29,7 @@
         <a href="index.html" class="back-link">← Back to Home</a>
     </nav>
     <div class="product-container">
-        <div class="product-image" style="background-image: url('https://images.unsplash.com/photo-1523293188086-b43e8c22dd06?q=80&w=800&auto=format&fit=crop');"></div>
+        <div class="product-image" style="background-image: url('https://github.com/ArmelionOfficial/ArmelionOfficial.github.io/blob/main/perfume.jpg?raw=true');"></div>
         <div class="product-details">
             <h1>SIGNATURE SCENTS</h1>
             <p class="price">Starting at ₹899</p>
