--- a/index.html
+++ b/index.html
@@ -35,7 +35,13 @@
             background: linear-gradient(rgba(255,255,255,0.1), rgba(255,255,255,0.8)), url('https://images.unsplash.com/photo-1487222477894-8943e31ef7b2?q=80&w=2000&auto=format&fit=crop'); 
             background-size: cover; background-position: center; 
         }
-        .logo-img { width: 160px; margin-bottom: 1rem; filter: drop-shadow(0 0 10px rgba(0,0,0,0.2)); }
+.logo-img { 
+            width: 140px; 
+            margin-bottom: 1rem; 
+            border-radius: 50%; /* Makes it a circle */
+            border: 2px solid #D4AF37; /* Adds a Gold Ring */
+            box-shadow: 0 0 20px rgba(0,0,0,0.3); /* Adds depth */
+        }
         
         /* Gold Text remains, but background is cleaner */
         .gold-text { 
