--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 
             <div class="product-card">
                 <div class="image-container">
-                    <img src="https://images.unsplash.com/photo-1594938298603-c8148c47e356?q=80&w=600&auto=format&fit=crop" alt="Tailored Trouser">
+                    <img src="https://images.unsplash.com/photo-1696889450800-e94ec7a32206?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fFRhaWxvcmVkJTIwdHJvdXNlcnN8ZW58MHx8MHx8fDA%3D" alt="Tailored Trouser">
                     <span class="badge">Hot</span>
                 </div>
                 <div class="product-info">
