--- a/index.html
+++ b/index.html
@@ -197,49 +197,49 @@
     <section id="collection" class="section">
         <h2>New Arrivals</h2>
         
-        <div class="product-grid">
-            <div class="product-card">
-                <div class="image-container">
-                    <img src="https://images.unsplash.com/photo-1591047139829-d91aecb6caea?q=80&w=600&auto=format&fit=crop" alt="Classic Trench">
-                    <span class="badge">New</span>
-                </div>
-                <div class="product-info">
-                    <h3>The Classic Overcoat</h3>
-                    <p>₹4,999</p>
-                </div>
-            </div>
-
-            <div class="product-card">
-                <div class="image-container">
-                    <img src="https://images.unsplash.com/photo-1596755094514-f87e34085b2c?q=80&w=600&auto=format&fit=crop" alt="Silk Blend Shirt">
-                </div>
-                <div class="product-info">
-                    <h3>Silk Blend Shirt</h3>
-                    <p>₹2,499</p>
-                </div>
-            </div>
-
-            <div class="product-card">
-                <div class="image-container">
-                    <img src="https://images.unsplash.com/photo-1696889450800-e94ec7a32206?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fFRhaWxvcmVkJTIwdHJvdXNlcnN8ZW58MHx8MHx8fDA%3D" alt="Tailored Trouser">
-                    <span class="badge">Hot</span>
-                </div>
-                <div class="product-info">
-                    <h3>Tailored Trouser</h3>
-                    <p>₹3,299</p>
-                </div>
-            </div>
-
-            <div class="product-card">
-                <div class="image-container">
-                    <img src="https://images.unsplash.com/photo-1507679799987-c73779587ccf?q=80&w=600&auto=format&fit=crop" alt="Signature Blazer">
-                </div>
-                <div class="product-info">
-                    <h3>Signature Blazer</h3>
-                    <p>₹6,999</p>
-                </div>
-            </div>
+       <div class="product-grid">
+    <a href="product.html?id=coat" class="product-card" style="text-decoration: none;">
+        <div class="image-container">
+            <img src="https://images.unsplash.com/photo-1591047139829-d91aecb6caea?q=80&w=600&auto=format&fit=crop" alt="Classic Trench">
+            <span class="badge">New</span>
         </div>
+        <div class="product-info">
+            <h3>The Classic Overcoat</h3>
+            <p>₹4,999</p>
+        </div>
+    </a>
+
+    <a href="product.html?id=shirt" class="product-card" style="text-decoration: none;">
+        <div class="image-container">
+            <img src="https://images.unsplash.com/photo-1596755094514-f87e34085b2c?q=80&w=600&auto=format&fit=crop" alt="Silk Blend Shirt">
+        </div>
+        <div class="product-info">
+            <h3>Silk Blend Shirt</h3>
+            <p>₹2,499</p>
+        </div>
+    </a>
+
+    <a href="product.html?id=pant" class="product-card" style="text-decoration: none;">
+        <div class="image-container">
+            <img src="https://images.unsplash.com/photo-1594938298603-c8148c47e356?q=80&w=600&auto=format&fit=crop" alt="Tailored Trouser">
+            <span class="badge">Hot</span>
+        </div>
+        <div class="product-info">
+            <h3>Tailored Trouser</h3>
+            <p>₹3,299</p>
+        </div>
+    </a>
+
+    <a href="product.html?id=blazer" class="product-card" style="text-decoration: none;">
+        <div class="image-container">
+            <img src="https://images.unsplash.com/photo-1507679799987-c73779587ccf?q=80&w=600&auto=format&fit=crop" alt="Signature Blazer">
+        </div>
+        <div class="product-info">
+            <h3>Signature Blazer</h3>
+            <p>₹6,999</p>
+        </div>
+    </a>
+</div>
 
         <a href="#collection" class="view-all-btn">View All Products</a>
     </section>
