--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
             <a href="story.html">Our Story</a>
             <a href="collection.html">Collection</a>
             <a href="#contact">Contact</a>
-            <div class="bag-icon">
-                BAG <span id="bag-count">0</span>
-            </div>
+           <a href="bag.html" class="bag-icon" style="text-decoration:none;">
+    BAG <span id="bag-count">0</span>
+</a>
        </div>
     </nav>
 
