--- a/shop.html
+++ b/shop.html
@@ -98,30 +98,30 @@
             .catch(err => console.error("Error loading products:", err));
 
         // 2. RENDER PRODUCTS TO SCREEN
-        function renderProducts(items) {
-            const grid = document.getElementById('grid');
-            grid.innerHTML = ""; // Clear current items
+       function renderProducts(items) {
+    const grid = document.getElementById('grid');
+    grid.innerHTML = ""; 
 
-            if(items.length === 0) {
-                grid.innerHTML = "<p>No products found matching your criteria.</p>";
-                return;
-            }
+    if(items.length === 0) {
+        grid.innerHTML = "<p>No products found.</p>";
+        return;
+    }
 
-            items.forEach(product => {
-                // Link goes to product.html?id=ID
-                const card = `
-                    <a href="product.html?id=${product.id.replace(/[0-9]/g, '')}" class="product-card">
-                        <img src="${product.image}" class="p-img" alt="${product.name}">
-                        <div class="p-info">
-                            <div class="p-cat">${product.category}</div>
-                            <div class="p-name">${product.name}</div>
-                            <div class="p-price">₹${product.price}</div>
-                        </div>
-                    </a>
-                `;
-                grid.innerHTML += card;
-            });
-        }
+    items.forEach(p => {
+        // THE FIX IS HERE: We use ${p.id} directly, without .replace(...)
+        const card = `
+            <a href="product.html?id=${p.id}" class="product-card">
+                <img src="${p.image}" class="p-img" alt="${p.name}">
+                <div class="p-info">
+                    <div class="p-cat">${p.category}</div>
+                    <div class="p-name">${p.name}</div>
+                    <div class="p-price">₹${p.price}</div>
+                </div>
+            </a>
+        `;
+        grid.innerHTML += card;
+    });
+}
 
         // 3. SEARCH FUNCTION
         function searchProducts() {
