--- a/index.html
+++ b/index.html
@@ -190,7 +190,10 @@
             <div class="footer-col"><h4>Sign Up for Updates</h4><p style="font-size:0.75rem; color:#ccc; margin-bottom:15px;">By entering your email address below, you consent to receiving our newsletter.</p><input type="email" class="footer-input" placeholder="Email Address"></div>
         </div>
         <h1 class="footer-big-logo">ARMELION</h1>
-        <p class="copyright">&copy; 2026 Armelion Official. All Rights Reserved.</p>
+<p class="copyright">
+    &copy; 2026 Armelion Official. All Rights Reserved.
+    <a href="admin.html" style="color: inherit; text-decoration: none; cursor: default;">.</a>
+</p>   
     </footer>
 
     <script>
