--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 
   gtag('config', 'G-35SL9C6EG8');
 </script>
+        <meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black">
+<link rel="apple-touch-icon" href="logo.jpg">
+<link rel="manifest" href="manifest.json">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ARMELION | The Royal Standard</title>
