--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
 
   gtag('config', 'G-35SL9C6EG8');
 </script>
-        <meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 <link rel="apple-touch-icon" href="logo.jpg">
-<link rel="manifest" href="manifest.json">
-    <meta charset="UTF-8">
+<link rel="manifest" href="manifest.json">  <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ARMELION | The Royal Standard</title>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
@@ -171,6 +170,8 @@
                     <div>
                         <h4 style="font-size: 0.8rem; text-transform: uppercase; letter-spacing: 1px; margin-bottom: 5px;">E-Mail</h4>
                         <p style="font-size: 0.9rem; color: #555;">armelion.business@outlook.com</p>
+                                                <p style="font-size: 0.9rem; color: #555;">contact.armelion@gmail.com</p>
+
                     </div>
                 </div>
             </div>
