--- a/index.html
+++ b/index.html
@@ -126,6 +126,39 @@
         font-size: 1rem;
         padding: 15px 0;
     }
+            /* Updated Logo & Nav Styling */
+        nav { 
+            position: fixed; 
+            top: 0; 
+            width: 100%; 
+            padding: 10px 40px; /* Thoda kam padding Gucci/LV style ke liye */
+            display: flex; 
+            justify-content: space-between; 
+            align-items: center; 
+            background: rgba(255, 255, 255, 0.98); 
+            z-index: 1000; 
+            border-bottom: 1px solid #f0f0f0; 
+        }
+        .nav-brand { display: flex; align-items: center; text-decoration: none; }
+        
+        /* Logo ki height 55px rakhi hai taaki initials/crown clear dikhe */
+        .nav-logo-img { 
+            height: 55px; 
+            width: auto; 
+            margin-right: 12px; 
+            transition: transform 0.3s ease;
+        } 
+        .nav-logo-img:hover { transform: scale(1.05); }
+
+        .nav-text { 
+            font-family: 'Playfair Display', serif; 
+            color: #000; 
+            font-weight: 700; 
+            letter-spacing: 3px; 
+            font-size: 1.3rem; 
+            text-transform: uppercase;
+        }
+
 }
     </style>
 </head>
