--- a/index.html
+++ b/index.html
@@ -164,9 +164,9 @@
 </head>
 <body>
     
-    <nav>
+     <nav>
         <a href="index.html" class="nav-brand">
-            <img src="logo.jpg" alt="Logo" class="nav-logo-img">
+            <img src="initials.png" alt="ARMELION Logo" class="nav-logo-img">
             <span class="nav-text">ARMELION</span>
         </a>
        <div class="nav-links">
@@ -178,6 +178,7 @@
             </a>
        </div>
     </nav>
+
 
     <section class="hero">
         <h1 class="huge-text">ARMELION</h1>
