--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
     
      <nav>
         <a href="index.html" class="nav-brand">
-            <img src="initials.png" alt="ARMELION Logo" class="nav-logo-img">
+            <img src="initial.png" alt="ARMELION Logo" class="nav-logo-img">
             <span class="nav-text">ARMELION</span>
         </a>
        <div class="nav-links">
