--- a/index.html
+++ b/index.html
@@ -154,6 +154,15 @@
     </style>
 </head>
 <body>
+        <div id="luxury-splash">
+    <div class="splash-content">
+        <img src="initials.png" alt="AL Monogram" class="splash-monogram">
+        <div class="splash-text-group">
+            <h1 class="splash-brand-name">ARMELION LUXURY</h1>
+            <p class="splash-tagline">RULE YOUR WORLD</p>
+        </div>
+    </div>
+</div>
     
      <nav>
         <a href="index.html" class="nav-brand">
