--- a/index.html
+++ b/index.html
@@ -203,32 +203,49 @@
     <img src="qr-code.png" alt="Scan to Install" style="width: 180px; padding: 10px; border: 1px solid #ddd; background: #fff; margin-top: 15px;">
     <p style="font-size: 0.7rem; margin-top: 10px;">NO DOWNLOAD REQUIRED • PWA TECHNOLOGY</p>
 </div>
-
 <footer>
     <div class="footer-top">
         <div class="footer-col">
             <h4>Client Services</h4>
-            <a href="info.html?page=track">Track Order</a><br>
-            <a href="info.html?page=returns">Returns</a><br>
-            <a href="info.html?page=faq">FAQs</a>
+            <ul>
+                <li><a href="index.html#contact">Contact Us</a></li>
+                <li><a href="info.html?page=track">Track Order</a></li>
+                <li><a href="info.html?page=returns">Returns & Exchanges</a></li>
+                <li><a href="info.html?page=shipping">Shipping Policy</a></li>
+                <li><a href="info.html?page=faq">FAQs</a></li>
+            </ul>
         </div>
         <div class="footer-col">
-            <h4>Company</h4>
-            <a href="story.html">Story</a><br>
-            <a href="info.html?page=privacy">Privacy</a><br>
-            <a href="info.html?page=terms">Terms</a>
+            <h4>The Company</h4>
+            <ul>
+                <li><a href="story.html">About Armelion</a></li>
+                <li><a href="info.html?page=careers">Careers</a></li>
+                <li><a href="info.html?page=legal">Legal Notice</a></li>
+                <li><a href="info.html?page=privacy">Privacy Policy</a></li>
+                <li><a href="info.html?page=terms">Terms of Service</a></li>
+            </ul>
         </div>
         <div class="footer-col">
             <h4>Find Us</h4>
-            <p style="font-size: 0.75rem; color: #ccc;">Model Town Phase 1, Bathinda</p>
+            <p style="font-size:0.8rem; color:#ccc; margin-bottom:15px; line-height:1.6;">
+                Model Town Phase 1,<br>Near Coaching Hub,<br>Bathinda
+            </p>
+            <a href="https://www.google.com/maps/search/Model+Town+Phase+1+Bathinda" target="_blank" style="color:#D4AF37; text-decoration:none; font-size:0.75rem; border-bottom:1px solid #D4AF37;">VIEW ON MAP</a>
         </div>
         <div class="footer-col">
-            <h4>Sign Up</h4>
-            <input type="email" placeholder="Email" style="background:transparent; border:none; border-bottom:1px solid #555; color:#fff; width:100%; padding:5px 0;">
+            <h4>Sign Up for Updates</h4>
+            <p style="font-size:0.75rem; color:#ccc; margin-bottom:15px;">By entering your email address below, you consent to receiving our newsletter.</p>
+            <form action="https://formspree.io/f/xaqqworb" method="POST" style="display:flex; border-bottom:1px solid #555;">
+                <input type="email" name="email" class="footer-input" placeholder="Email Address" required style="border:none; margin:0;">
+                <button type="submit" style="background:none; border:none; color:#fff; cursor:pointer;">→</button>
+            </form>
         </div>
     </div>
     <h1 class="footer-big-logo">ARMELION</h1>
-    <p class="copyright">© 2026 Armelion Official. All Rights Reserved.</p>
+    <p class="copyright">
+        &copy; 2026 Armelion Official. All Rights Reserved.
+        <a href="admin.html" style="color: inherit; text-decoration: none; cursor: default;">.</a>
+    </p>
 </footer>
 
 <script>
