--- a/index.html
+++ b/index.html
@@ -269,6 +269,13 @@
         © 2026 Armelion Official. All Rights Reserved.
     </p>
 </footer>
+    </div>
+    <h1 class="footer-big-logo">ARMELION</h1>
+    <p class="copyright">
+        &copy; 2026 Armelion Official. All Rights Reserved.
+        <a href="admin.html" style="color: inherit; text-decoration: none; cursor: default;">.</a>
+    </p>
+</footer>
 
 <script>
     // 1. SPLASH SCREEN LOGIC
