--- a/index.html
+++ b/index.html
@@ -117,7 +117,9 @@
 
             .product-grid { grid-template-columns: repeat(2, 1fr); gap: 15px; }
             .footer-top { grid-template-columns: 1fr; }
-            .footer-big-logo { font-size: 18vw; }
+            
+            /* FIXED FOOTER LOGO FOR MOBILE */
+            .footer-big-logo { font-size: 14vw; letter-spacing: 2px; }
 
             /* CONTACT AREA MOBILE FIX */
             #contact-grid { grid-template-columns: 1fr !important; gap: 40px !important; }
