--- a/admin.html
+++ b/admin.html
@@ -172,7 +172,14 @@
             document.getElementById('json-output').select();
             document.execCommand("copy");
             alert("Code copied to clipboard! Now paste it into products.json");
-        }
+            },
+            {
+    "id": "urb837",
+    "name": "Men's mechanical wristwatch",
+    "category": "Urban",
+    "price": 4999,
+    "image": "https://images.unsplash.com/photo-1623998021661-dc7555b2213d?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8bWVuJTIwd2F0Y2h8ZW58MHx8MHx8fDA%3D"
+     }
     </script>
 </body>
 </html>
