--- a/admin.html
+++ b/admin.html
@@ -83,6 +83,7 @@
                         <option value="Office">The Office</option>
                         <option value="Special">Special Event</option>
                         <option value="Daily">Daily Life</option>
+                             <option value="Accessories">Accessories</option>
                     </select>
                 </div>
 
